<resources>
    <!--facebook login-->
    <string name="facebook_app_id">879577766289201</string>
    <string name="fb_login_protocol_scheme">fb879577766289201</string>


    <string name="app_name">Iamin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="textGroupInsert">GroupInsert</string>
    <string name="textMerchInsert">MerchInsert</string>
    <string name="textNoNetwork">no network connection available</string>
    <string name="textNoMerchsFound">no Merchs found</string>
    <string name="textCurrency">NT</string>
    <string name="textEdit">Edit</string>
    <string name="textDelete">Delete</string>
    <string name="textDeleteFail">DeleteFail</string>
    <string name="textDeleteSuccess">DeleteSuccess</string>
    <string name="textAdd">Add</string>
    <string name="textNoCameraApp">No Camera App Found</string>
    <string name="textNoImagesFound">No Images Found</string>
    <string name="textUpdate">Update</string>
    <string name="textNoMerchFound">No Merch Found</string>
    <string name="textGoal">Goal</string>
    <string name="textMerchDetails">MerchDetails：</string>
    <string name="textTotalAmount">TotalAmount</string>
    <string name="textDeadline">Deadline：</string>
    <string name="textNoGroupsFound">No Groups Found</string>
    <string name="textGoalNeeds">goal needs：</string>
    <string name="textGroupUnit">份</string>
    <string name="textCategory">Category</string>
    <string name="textContactNumber">聯絡電話</string>
    <string name="textPaymentMethod">收款方式</string>
    <string name="textCreditcard">信用卡</string>
    <string name="textFaceToFace">當面交易</string>
    <string name="textPrivacyFlag">PrivacyFlag</string>
    <string name="textPrivacyOff">PrivacyOff</string>
    <string name="textPrivacyOn">PrivacyOn</string>
    <string name="textNoGroupCategorieFound">No GroupCategorie Found</string>
    <string name="textGroupAddLocation">新增</string>
    <string name="textLocationNotFound">找不到地址</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textChat">Chat</string>
    <string name="textHome">Home</string>
    <string name="alltime">All Time</string>
    <string name="no_merch_found">no merch found</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="income">Income</string>
    <string name="homepage">Homepage</string>
    <string name="mywallet">MyWallet</string>
    <string name="orderlist">OrderList</string>
    <string name="sellercenter">SellerCenter</string>
    <string name="follow">Follow</string>
    <string name="profile">Profile</string>
    <string name="facebookloginsuccess">facebook:onSuccess:</string>
    <string name="facebooklogincancel">facebook:onCancel</string>
    <string name="facebookloginerror">facebook:onError</string>
    <string name="cannotbeempty">Cannot be empty</string>
    <string name="please_enter_phone_number">Please enter phone number</string>
    <string name="phone_number">Phone number</string>
    <string name="send">Send</string>
    <string name="resend">ReSend</string>
    <string name="please_enter_the_code">please enter the code</string>
    <string name="one_time_password">One time password</string>
    <string name="confirm">confirm</string>
    <string name="sigininfail">Sign in fail.</string>
    <string name="passwordandemailcannotbeempty">Email/Password can\'t not be empty</string>
    <string name="authfailed">Authentication failed.</string>
    <string name="signinwithemailsuccess">signInWithEmail:success</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="forget_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_yet_register_now">Don\'t have an account yet? Register Now!</string>
    <string name="authenticate_with_phone_number">Authenticate with phone number</string>
    <string name="signinwithfb">SignInWithFB</string>
    <string name="use_other_method">------------------ use other method ------------------</string>
    <string name="username">UserName</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="followcount">followCount</string>
    <string name="score">score</string>
    <string name="search">Search</string>
    <string name="ongoing">Ongoing</string>
    <string name="reach">Reach</string>
    <string name="failed">Failed</string>
    <string name="nickname">Nickname</string>
    <string name="rating">Rating</string>
    <string name="follow_count">Follow Count</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="time">Time</string>
    <string name="loaction">Loaction</string>
    <string name="status">status</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="text_helper_required">Required*</string>
    <string name="welcome_to">Welcome to</string>
    <string name="textsignup">SignUp</string>
    <string name="text_phone_number">Phone number</string>
    <string name="membercenter">MemberCenter</string>
    <string name="spending">Spending</string>
    <string name="textNoSellerFound">No Seller Found</string>
    <string name="textImageDownloadFail">Image Download Fail</string>
    <string name="textSellerName">Seller Name</string>
    <string name="textAa">Aa</string>
    <string name="textUploadSuccess">Upload Success</string>
    <string name="textUploadFail">Upload Fail</string>
    <string name="update">Update</string>
    <string name="textsocialloginhelpertext">Please enter nickname will be shown in the app</string>
    <string name="textinputtexthelper">Please enter nickname</string>
    <string name="textnouser">No user found</string>
    <string name="welcomeback">Welcome Back</string>
    <string name="textcantbeblank">can\'t be blank</string>
    <string name="textemailinvalid">Your email id is invalid</string>
    <string name="textcodesent">Code sent. Code number is 988334</string>
    <string name="textphoneformaterror">Phone number format error</string>
    <string name="textsmserror">The sms verification code used to create the phone auth credential is invalid. Please resend the verification code sms and be sure use the verification code provided by the user.</string>
    <string name="text_enter_your_email_to_received_reset_link">Enter Your Email To Received Reset Link</string>
    <string name="text_reset_password">Reset Link Sent To Your Email</string>
    <string name="text_reset_password_error">Error! Reset Link Is Not Sent</string>
    <string name="text_confirm_password">Confirm Password</string>
    <string name="text_confirm_error">The Confirm Password confirmation does not match</string>
    <string name="text_creating_new_account">Creating New Account</string>
    <string name="text_creating_account_message">Please wait,while we are creating your new Account…</string>
    <string name="text_google_signin_success">Google Sign-In Success</string>
    <string name="text_verification_account">Account verification</string>
    <string name="text_account_verification_message">Please wait for a while…</string>
    <string name="text_welcome_back">Welcome Come Back</string>
    <string name="textMessageIsInvalid">Message Is Invalid</string>
    <string name="textSendMessage">Send Message</string>
    <string name="textSendMessageFail">Send Message Fail</string>
    <string name="textNoMessageFound">No Message Found</string>
    <string name="textMessage">Message</string>
    <string name="default_notification_channel_id">default_channel_id</string>
    <string name="chat_notification_channel_id">chat_notification_channel_id</string>
    <string name="text_update_failed">Update failed</string>
    <string name="text_update_success">Update success</string>
    <string name="test_no_network">No network</string>
    <string name="text_profile_updating">Profile Updating</string>
    <string name="text_please_wait_for_a_while">Please wait for a while…</string>
    <string name="text_my_group_list">My Group List</string>
    <string name="text_senior_member">Senior Member</string>
    <string name="text_general_member">General Member</string>
    <string name="text_order_details_id">\"MemberorderDetailsID : \"</string>
    <string name="text_merch_name">Merchname: </string>
    <string name="text_total_format">TotalFromat: </string>
    <string name="text_quantity">Quantity: </string>
    <string name="text_merch_details">MerchDeatils: </string>
    <string name="my_group_list">My Group List</string>
    <string name="statistic_chart">Statistic Chart</string>
    <string name="text_paymentmethod">PaymentMethod: </string>
    <string name="text_total_price">TotalPrice: </string>
    <string name="text_member_order_id">MemberOrderId: </string>
    <string name="deadline">DeadLine</string>
    <string name="pick_up_location1">Pick Up Location 1:</string>
    <string name="pick_up_location2">Pick Up Location 2:</string>
    <string name="pick_up_location3">Pick Up Location 3:</string>
    <string name="text_money_ntd">" NTD"</string>
    <string name="pickup_time">Pickup Time:</string>
    <string name="text_group_name">Group Name</string>
    <string name="text_details_all">All</string>
    <string name="text_order_details">Order details</string>
    <string name="textCannotUseGPay">Cannot use Google Pay</string>
    <string name="textCanceled">Canceled by the user.</string>

    <!-- 填上TapPay Portal上註冊的資料 -->
    <!-- 開發者 / 應用程式 -->
    <string name="TapPay_AppID">14130</string>
    <string name="TapPay_AppKey">app_LfnLPvybt8PKvwwmxEjRxG2TEsAtm61JgrSCIK1HJwBgPE9VUsJ0veTN9zlA</string>

    <!-- 帳戶資訊 -->
    <string name="TapPay_PartnerKey">partner_o7gqvRS1LSD6jxazGAWczibPhXKXAcmx1g4LSl2WGRDsLsQGaOCBgpWe</string>

    <!-- 商家管理 / 商家設置-->
    <string name="TapPay_MerchantName">TW_TAISHIN</string>
    <string name="TapPay_MerchantID">85147883_TAISHIN</string>
    <string name="textConfirmPay">Confirm Pay</string>
    <string name="text_perchase_number">Perchase number:</string>
    <string name="text_show_password">Show Password</string>
    <string name="text_sign_in_with_google">Sign in with google</string>
    <string name="text_sumbit_rating">⭐️Sumbit Rating</string>
    <string name="text_sumbit">sumbit</string>
    <string name="text_rating_submit">Message Sumbit, Thanks You!</string>
    <string name="text_message">message: </string>
    <string name="my_rating">My Rating</string>
    <string name="Success" />
    <string name="textBuySuccess">success</string>
    <string name="text_checkout">Checkout</string>
    <string name="text_takePicture">TakePicture</string>
    <string name="text_pickpicture">PickPicture</string>
    <string name="text_reset_phone_number">Reset Phone Number?</string>
    <string-array name="report">
        <item>類別錯誤</item>
        <item>違反善良風俗</item>
        <item>違法物品</item>
        <item>其他</item>
    </string-array>
</resources>