<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    android:padding="16dp"
    tools:context=".MemberForgetPassword">

    <View
        android:layout_width="match_parent"
        android:layout_height="200dp"/>

    <TextView
        android:textAlignment="center"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_enter_your_email_to_received_reset_link" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/forgetEmailTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:hint="@string/email"
        app:startIconDrawable="@drawable/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etForgetEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:background="@drawable/bg_black_border_button"
        app:backgroundTint="@null"
        android:textColor="@color/black"
        android:id="@+id/btForgetSendEmail"
        android:layout_gravity="center"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:text="@string/send" />

    <TextView
        android:id="@+id/forgetTextLink"
        android:textAlignment="center"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>