<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:foreground="?attr/selectableItemBackground"
    app:cardBackgroundColor="@color/colorSecondaryLight"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewGroupName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="TextView"
            android:textSize="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewGroupGoal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="220dp"
            android:layout_marginEnd="5dp"
            android:text="@string/textGoal"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="@+id/textViewGroupName"
            app:layout_constraintEnd_toStartOf="@+id/textViewGoal"
            app:layout_constraintStart_toStartOf="@+id/textViewGroupName"
            app:layout_constraintTop_toTopOf="@+id/textViewGroupName" />

        <TextView
            android:id="@+id/textViewGoal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="50"
            android:textColor="@color/purple_700"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/textViewGroupDelete"
            app:layout_constraintTop_toTopOf="@+id/textViewGroupGoal" />

        <TextView
            android:id="@+id/textViewGroupDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/textDelete"
            android:textColor="@color/colorRed"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textViewGoal" />

        <TextView
            android:id="@+id/textViewMerchDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/textMerchDetails"
            android:textSize="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewGroupName" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollViewGroupM"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewMerchDetails" >

            <LinearLayout
                android:id="@+id/linearLayoutGroupM"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"></LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/textViewTotalAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/textTotalAmount"
            android:textSize="14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollViewGroupM" />

        <TextView
            android:id="@+id/textViewTAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="TextView"
            android:textColor="@color/purple_700"
            android:textSize="14dp"
            app:layout_constraintStart_toEndOf="@+id/textViewTotalAmount"
            app:layout_constraintTop_toTopOf="@+id/textViewTotalAmount" />

        <TextView
            android:id="@+id/textViewDeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="5dp"
            android:text="@string/textDeadline"
            android:textSize="14dp"
            app:layout_constraintEnd_toStartOf="@+id/textViewDeadlineTime"
            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollViewGroupM" />

        <TextView
            android:id="@+id/textViewDeadlineTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="TextView"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textViewDeadline" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>