<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/member_background_50"
    tools:context=".LogInFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginVertical="8dp"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/forLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/project_icon_large" />

                <TextView
                    android:id="@+id/quickLogin"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="55dp"
                    android:text="@string/welcome_back"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:orientation="vertical"
                android:paddingHorizontal="20dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/logInEmailTil"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:hint="@string/email"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:startIconDrawable="@drawable/email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etLoginEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/member_round_edit_text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/logInPasswordTil"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:hint="@string/password"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:passwordToggleEnabled="true"
                    app:startIconDrawable="@drawable/lock">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etLoginPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/member_round_edit_text"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btForgetPassword"
                        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="20dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:minHeight="0dp"
                        android:text="@string/forget_password"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/btLogIn"
                        android:layout_width="0dp"
                        android:layout_height="65dp"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginVertical="20dp"
                        android:layout_weight="1.5"

                        android:background="@drawable/bg_black_border_button"
                        android:text="@string/login"
                        android:textColor="@color/black"
                        app:backgroundTint="@null" />
                </LinearLayout>

                <Button
                    android:id="@+id/btToSignUp"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:gravity="center"
                    android:minHeight="0dp"
                    android:text="@string/don_t_have_an_account_yet_register_now"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

<!--                <Button-->
<!--                    android:id="@+id/btPhoneSingIn"-->
<!--                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"-->
<!--                    android:layout_width="200dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_gravity="end"-->
<!--                    android:gravity="center"-->
<!--                    android:minHeight="0dp"-->
<!--                    android:text="@string/authenticate_with_phone_number"-->
<!--                    android:textColor="@color/black"-->
<!--                    android:textSize="12sp" />-->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:gravity="center"
                    android:text="@string/use_other_method" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:padding="20dp">

                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/btSignInFacebook"
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:paddingLeft="11dp"
                        android:paddingTop="11dp"
                        android:paddingBottom="11dp"
                        android:paddingRight="11dp"
                        android:textSize="14sp"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="60dp"
                        android:layout_marginBottom="10dp" />

                    <com.developer.gbuttons.GoogleSignInButton
                        android:id="@+id/btSignInGoogle"
                        android:textSize="20sp"
                        android:layout_width="207dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:textAlignment="viewStart"
                        android:text="以 Google 帳號繼續" />
                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>